turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:11: error: ':' expected but ')' found.
def setCouleurSol(couleur) {
                         ^LangtonsAnt:25: error: identifier expected but '}' found.
}
^